# bima

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  build-and-release.yml  tag.yml
python/bima/: __init__.py  body.py  disk.py  energy.py  initial.py  simulation.py  trajectory.py
python/bima/method/: force.py  integrator.py
python/example/: 10-body.py  2body.py  3body.py  in_disk.ipynb  in_disk.py  in_memory.ipynb  in_memory.py  main.py  notebook.ipynb
src/: energy.rs  initial.rs  lib.rs  progress_bar.rs  simulation.rs  utils.rs
src/core/: update.rs
src/effect/: disk.rs  memory.rs  mod.rs  progress_bar.rs  py_stdout.rs  store.rs
src/energy/: mod.rs  progress_bar.rs  py_stdout.rs  updater.rs
src/force/: direct.rs  mod.rs
src/integrator/: bs.rs  euler.rs  leap_frog.rs  mod.rs  rk4.rs
src/old/: disk.rs  memory.rs  mod.rs  progress_bar.rs  py_stdout.rs  store.rs
src/progress_bar/: mod.rs  py_stdout.rs
src/simulation/: in_disk.rs  in_memory.rs  mod.rs  store.rs  utils.rs
