[package]
name = "bima"
version = "0.6.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bima"
crate-type = ["cdylib"]

[dependencies]
bima-rs = "0.2.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
hdf5 = "0.8.1"
may = "0.3.51"
