[package]
name = "bima"
version = "0.6.6"
edition = "2024"
repository = "https://github.com/Alisyaifudin/bima"
authors = ["Muhammad Ali Syaifudin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bima"
crate-type = ["cdylib"]

[dependencies]
bima-rs = { path = "../bima-rs" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
paste = "1.0.15"
